--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
   "homepage": "https://github.com/livnelang/Swimming-Pool-Management#readme",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "dotenv": "^10.0.0",
     "express": "^4.16.3",
     "jsonwebtoken": "^8.3.0",
-    "mongoose": "^5.2.1"
+    "mongoose": "^5.12.10"
   }
 }
