--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
   },
   "homepage": "https://github.com/livnelang/Swimming-Pool-Management#readme",
   "dependencies": {
-    "body-parser": "^1.18.3",
-    "dotenv": "^10.0.0",
-    "express": "^4.16.3",
-    "jsonwebtoken": "^8.3.0",
-    "mongoose": "^5.12.10"
+    "body-parser": "1.19.0",
+    "dotenv": "10.0.0",
+    "express": "4.17.1",
+    "json2csv": "5.0.7",
+    "jsonwebtoken": "8.5.1",
+    "moment": "2.29.3",
+    "mongoose": "5.12.10",
+    "sib-api-v3-sdk": "8.3.0"
   }
 }
